Add subprojects Fixes #62

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -56,8 +56,8 @@
     <link rel="shortlink" href="{{ CANONICAL_PATH }}">
 
     <meta property="og:site_name" content="Hello There !"/>
-    <meta property="og:image" content="{% static 'khoBlog/img/ruthinkktoobig.png' %}">
-    <meta property="twitter:image" content="{% static 'khoBlog/img/ruthinkktoobig.png' %}">
+    <meta property="og:image" content="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}">
+    <meta property="twitter:image" content="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}">
 
     {% block page_head %}
       <!-- Primary Meta Tags -->
