--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -56,8 +56,8 @@
     <link rel="shortlink" href="{{ CANONICAL_PATH }}">
 
     <meta property="og:site_name" content="Hello There !"/>
-    <meta property="og:image" content="{% static 'khoBlog/img/ruthinkktoobig.png' %}">
-    <meta property="twitter:image" content="{% static 'khoBlog/img/ruthinkktoobig.png' %}">
+    <meta property="og:image" content="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}">
+    <meta property="twitter:image" content="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}">
 
     {% block page_head %}
       <!-- Primary Meta Tags -->
@@ -111,7 +111,7 @@
         <div class="flex flex-col flex-wrap p-5 mx-auto md:items-center md:flex-row">
           <a href="{% url 'blog:post_list' %}" class="focus:outline-none">
             <div class="inline-flex items-center">
-              <img class='w-8 h-8 object-cover rounded-full' alt='RuthinkkTooBig' src="{% static 'khoBlog/img/ruthinkktoobig.webp' %}" loading="lazy">
+              <img class='w-8 h-8 object-cover rounded-full' alt='RuthinkkTooBig' src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" loading="lazy">
               <h2 class="block p-2 text-xl font-medium tracking-tighter transition duration-500 ease-in-out transform cursor-pointer hover:text-purple-500 lg:text-x">
                 Khodok's
                 {{ app_title }}
