--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -33,22 +33,33 @@
               <a class="cat-link" href="{{ object.categories.first.get_absolute_url }}">{{ object.categories.first|capfirst }}</a>
             </strong>
           {% endif %}
-          <p class="mb-0 text-small text-white-50">
-            Post #{{ object.id }}
-          </p>
+          {% if not is_featured %}
+            <p class="mb-0 text-small text-white-50">
+              Post #{{ object.id }}
+            </p>
+          {% else %}
+            <strong>
+              <span class="d-inline-block text-white-50">
+                •
+                <span class="fst-italic">Featured Post</span>
+              </span>
+            </strong>
+          {% endif %}
         </span>
-        <span class="col-auto mx-2">
-          <span class="badge bg-secondary d-flex justify-content-center" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ object.get_language_display }}">{{ object.language }}</span>
+        {% if not is_featured %}
+          <span class="col-auto mx-2">
+            <span class="badge bg-secondary d-flex justify-content-center" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ object.get_language_display }}">{{ object.language }}</span>
 
-          {% if object.is_outdated %}
-            <span class="badge bg-warning d-flex float-end">Outdated</span>
-          {% endif %}
-        </span>
-        <span class="col">
-          {% if context.user.is_superuser %}
-            {% sb object %}
-          {% endif %}
-        </span>
+            {% if object.is_outdated %}
+              <span class="badge bg-warning d-flex float-end">Outdated</span>
+            {% endif %}
+          </span>
+          <span class="col">
+            {% if context.user.is_superuser %}
+              {% sb object %}
+            {% endif %}
+          </span>
+        {% endif %}
       </section>
     {% endblock card_header %}
   </header>
@@ -190,7 +201,8 @@
           <span class="text-white-50">
             Seen:
           </span>
-          {{ object.clicks }} time{{ object.clicks|pluralize:'s' }}
+          {{ object.clicks }}
+          time{{ object.clicks|pluralize:'s' }}
         </p>
 
         {% if object.get_tags and not user.is_superuser or object.get_admin_tags and user.is_superuser %}
@@ -238,8 +250,16 @@
           <span class="text-white-50">
             Categories:
           </span>
-          {% comment %} {% endcomment %}
-          {% include 'blog/includes/post_categories.html' with post=object %}
+          {% for category in object.categories.all %}
+            {% if not category.withdrawn or category.withdrawn and context.user.is_superuser %}
+              {% spaceless %}
+                <a href="{{ category.get_absolute_url }}">{{ category|capfirst }}</a>
+                {% if not forloop.last %}
+                  <span>,</span>
+                {% endif %}
+              {% endspaceless %}
+            {% endif %}
+          {% endfor %}
         </p>
       {% elif in_list %}
         <span class="d-flex">
