--- a/blog/templates/blog/lists/category_list.html
+++ b/blog/templates/blog/lists/category_list.html
@@ -14,10 +14,20 @@
                   <strong class="text-white-50">
                     <a class="text-white-50" href="{% url 'blog:latest_category_post_feed' slug=cat.slug %}">Category #{{ cat.id }}</a>
                   </strong>
-                  <p class="mb-0 text-white-50">Category Post Count:
-                    {% if user.is_superuser %}{{ cat.get_superuser_post_count_in_category }}
+                  <p class="mb-0 text-white-50">Post count:
+                    {% if user.is_superuser %}
+                      <strong>{{ cat.get_superuser_post_count_in_category }}</strong>
                       |
-                    {% endif %}{{ cat.get_post_count_in_category }}</p>
+                    {% endif %}
+                    {{ cat.get_post_count_in_category }}
+                  </p>
+                  <p class="mb-0 text-white-50">Percentage:
+                    {% if user.is_superuser %}
+                      <strong>{{ cat.get_superuser_percent_of_posts }}</strong>
+                      |
+                    {% endif %}
+                    {{ cat.get_percent_of_posts }}
+                  </p>
                 </span>
                 {% if user.is_superuser %}
                   <span class="col-auto">
