--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -1,8 +1,16 @@
 {% load cards %}
 
-<section class="text-gray-400 bg-gray-900 body-font">
-  <section class="container p-5 mx-auto">
-    <section class="flex flex-wrap -m-4">
+<section class="bg-white pt-4 pb-20 px-4 sm:px-6 lg:pt-8 lg:pb-28 lg:px-8">
+  <section class="relative max-w-lg mx-auto divide-y-2 divide-gray-200 lg:max-w-7xl">
+    <section>
+      <h2 class="text-3xl tracking-tight font-extrabold text-gray-900 sm:text-4xl">
+        Latest Posts
+      </h2>
+      <p class="mt-3 text-xl text-gray-500 sm:mt-4">
+        {{ description }}
+      </p>
+    </section>
+    <section class="mt-12 grid gap-16 pt-12 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
       {% for object in object_list %}
         {% cards object %}
       {% endfor %}
