--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -57,51 +57,99 @@
         {% endif %}
       </nav>
     {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
-      <nav class="mt-1 bg-gray-800">
+      <section class="bg-white px-4 py-3 flex items-center justify-between border-t border-gray-200 sm:px-6">
         {% if is_paginated %}
-          <div class="flex py-1 bg-gray-900">
+          <section class="flex-1 flex justify-between sm:hidden">
             {% if page_obj.has_previous %}
-              <a class="flex items-center px-4 py-2 ml-1 transition-colors duration-200 transform rounded-md bg-gray-900 text-gray-400 hover:bg-indigo-500 hover:text-gray-200" href="{% relative_url page_obj.previous_page_number 'page' request.GET.urlencode %}">
+              <a href="{% relative_url page_obj.previous_page_number 'page' request.GET.urlencode %}" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
                 Previous
               </a>
             {% else %}
-              <a class="flex items-center px-4 py-2 ml-1 rounded-md cursor-not-allowed bg-gray-900 text-gray-400 disabled:opacity-50" disabled>
+              <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 disabled:opacity-50" disabled>
                 Previous
-              </a>
+              </span>
             {% endif %}
-
-            {% get_proper_elided_page_range paginator page_obj.number as page_range %}
-            {% comment %} {% endcomment %}
-            {% for i in page_range|default_if_none:page_obj.paginator.get_elided_page_range %}
-              {% if page_obj.number == i %}
-                <span class="flex items-center px-4 py-2 mx-1 transition-colors duration-200 transform rounded-md bg-indigo-500 text-gray-200">{{ i }}
-                  <span class="sr-only">(current)</span>
-                </span>
-              {% else %}
-                {% if i == page_obj.paginator.ELLIPSIS %}
-                  <a class="flex items-center px-4 py-2 mx-1 transition-colors duration-200 transform rounded-md bg-gray-900 text-gray-400 hover:bg-indigo-500 hover:text-gray-200">
-                    {{ i }}
-                  </a>
-                {% else %}
-                  <a class="flex items-center px-4 py-2 mx-1 transition-colors duration-200 transform rounded-md bg-gray-900 text-gray-400 hover:bg-indigo-500 hover:text-gray-200" href="{% relative_url i 'page' request.GET.urlencode %}">
-                    {{ i }}
-                  </a>
-                {% endif %}
-              {% endif %}
-            {% endfor %}
-
             {% if page_obj.has_next %}
-              <a class="flex items-center px-4 py-2 ms-1 transition-colors duration-200 transform rounded-md bg-gray-800 text-gray-200 hover:bg-indigo-500 hover:text-gray-200" href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}">
+              <a href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}" class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
                 Next
               </a>
             {% else %}
-              <span class="flex items-center px-4 py-2 ms-1 rounded-md cursor-not-allowed bg-gray-800 text-gray-600 disabled:opacity-50" disabled>
+              <span class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 disabled:opacity-50" disabled>
                 Next
               </span>
             {% endif %}
-          </div>
+          </section>
+
+          <section class="hidden sm:flex-1 sm:flex sm:items-center sm:justify-between">
+            <section>
+              <p class="text-sm text-gray-700">
+                Showing
+                <span class="font-medium">{{ posts.count }}</span>
+                results
+              </p>
+            </section>
+
+            <section>
+              <nav class="relative z-0 inline-flex rounded-md shadow-sm -space-x-px" aria-label="Pagination">
+                {% if page_obj.has_previous %}
+                  <a href="{% relative_url page_obj.previous_page_number 'page' request.GET.urlencode %}" class="previous_pagination_button">
+                    <span class="sr-only">Previous</span>
+                    <!-- Heroicon name: solid/chevron-left -->
+                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                      <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
+                    </svg>
+                  </a>
+                {% else %}
+                  <button disabled class="previous_pagination_button">
+                    <span class="sr-only">Previous</span>
+                    <!-- Heroicon name: solid/chevron-left -->
+                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                      <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
+                    </svg>
+                  </button>
+                {% endif %}
+
+                {% get_proper_elided_page_range paginator page_obj.number as page_range %}
+                {% for i in page_range|default_if_none:page_obj.paginator.get_elided_page_range %}
+                  {% if page_obj.number == i %}
+                    <span aria-current="page" class="z-10 bg-indigo-50 border-indigo-500 text-indigo-600 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+                      {{ i }}
+                    </span>
+                  {% else %}
+                    {% if i == page_obj.paginator.ELLIPSIS %}
+                      <a class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700">
+                        {{ i }}
+                      </a>
+                    {% else %}
+                      <a href="{% relative_url i 'page' request.GET.urlencode %}" class="bg-white border-gray-300 text-gray-500 hover:bg-gray-50 relative inline-flex items-center px-4 py-2 border text-sm font-medium">
+                        {{ i }}
+                      </a>
+                    {% endif %}
+                  {% endif %}
+                {% endfor %}
+
+                {% if page_obj.has_next %}
+                  <a href="{% relative_url page_obj.next_page_number 'page' request.GET.urlencode %}" class="next_pagination_button">
+                    <span class="sr-only">Next</span>
+                    <!-- Heroicon name: solid/chevron-right -->
+                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                      <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+                    </svg>
+                  </a>
+                {% else %}
+                  <button disabled class="next_pagination_button">
+                    <span class="sr-only">Next</span>
+                    <!-- Heroicon name: solid/chevron-right -->
+                    <svg class="h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                      <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd" />
+                    </svg>
+                  </button>
+                {% endif %}
+              </nav>
+            </section>
+          </section>
         {% endif %}
-      </nav>
+      </section>
     {% endif %}
   {% endblock pagination %}
 
