--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -1,6 +1,60 @@
 {% load featured_post comments %}
 
-<article class="p-2 w-full md:w-1/3">
+<article>
+  <section>
+    {% if object.categories %}
+      {% if object.get_featured_cat %}
+        <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="inline-block">
+          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
+            {{ object.featured_cat_title }}
+          </span>
+        </a>
+      {% else %}
+        <a href="{{ object.categories.first.get_absolute_url }}" class="inline-block">
+          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800">
+            {{ object.categories.first }}
+          </span>
+        </a>
+      {% endif %}
+    {% endif %}
+  </section>
+  <a href="{{ object.get_absolute_url }}" class="block mt-4">
+    <p class="text-xl font-semibold text-gray-900 text-word-wrap">
+      {{ object.title }}
+    </p>
+    <p class="mt-3 text-base text-gray-500">
+      {{ object.description }}
+    </p>
+  </a>
+  <div class="mt-6 flex items-center">
+    <div class="flex-shrink-0">
+      <a href="#">
+        <span class="sr-only">{{ object.author }}</span>
+        <img class="h-10 w-10 rounded-full" src="{{ object.author.profile_pic.url }}" alt="" loading="lazy">
+      </a>
+    </div>
+    <div class="ml-3">
+      <p class="text-sm font-medium text-gray-900">
+        <a href="{{ object.author.get_absolute_url }}">
+          {{ object.author }}
+        </a>
+      </p>
+      <div class="flex space-x-1 text-sm text-gray-500">
+        <time datetime="{{ object.pub_date|date:"c" }}">
+          {{ object.pub_date|date:"Y\-m\-d" }}
+        </time>
+        <span aria-hidden="true">
+          &middot;
+        </span>
+        <span>
+          6 min read
+        </span>
+      </div>
+    </div>
+  </div>
+</article>
+
+{% comment %} <article class="p-2 w-full md:w-1/3">
   <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
     <section class="p-6">
       {% if object.categories %}
@@ -62,4 +116,4 @@
       </section>
     </section>
   </div>
-</article>
+</article> {% endcomment %}
