--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .menu_mobile_buttons {
+        @apply mt-1 first:mt-0 block px-3 py-2 rounded-md text-base font-medium text-white bg-indigo-800;
+    }
+
+    .pagination_buttons {
+        @apply relative inline-flex items-center px-2 py-2 border border-gray-300 text-sm font-medium text-gray-500 disabled:bg-slate-600 disabled:cursor-not-allowed;
+    }
+
+    .next_pagination_button {
+        @apply pagination_buttons rounded-r-md;
+    }
+
+    .previous_pagination_button {
+        @apply pagination_buttons rounded-l-md;
+    }
+}
