--- a/khoBlog/templates/tailwind/links_list_n.html
+++ b/khoBlog/templates/tailwind/links_list_n.html
@@ -1,11 +1,10 @@
 {% for url in urls %}
-  {% if not context.enable_tailwind_flag and context.user.is_authenticated and not context.user.enable_tailwind or not context.enable_tailwind_flag and not context.user.is_authenticated %}
-    <li>
-      <a class="nav-link" href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}">{{ url.title }}</a>
-    </li>
-  {% elif context.enable_tailwind_flag or context.user.is_authenticated and context.user.enable_tailwind %}
-    <li>
-      <a href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}" class="px-4 py-1 mr-1 text-base text-purple-500 transition duration-500 ease-in-out transform rounded-md focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">{% firstof url.featured_title url.title %}</a>
-    </li>
-  {% endif %}
+  <li class="flow-root">
+    <a href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-50 transition ease-in-out duration-150">
+      <svg class="flex-shrink-0 h-6 w-6 text-gray-400" x-description="Heroicon name: outline/information-circle" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+      </svg>
+      <span class="ml-4">{% firstof url.featured_title url.title %}</span>
+    </a>
+  </li>
 {% endfor %}
