First use of the new display templatetag

--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -1,4 +1,4 @@
-{% load static socialaccount links_menu render_urls default_app_theme_set footer_set sitetree compress analytical google_analytics_gtag activeurl djversion_tags tailwind_tags weblog featured_post %}
+{% load static socialaccount links_menu render_urls default_app_theme_set footer_set sitetree compress analytical google_analytics_gtag activeurl djversion_tags tailwind_tags weblog featured_post display %}
 {% comment %} {% endcomment %}
 <!DOCTYPE html>
 <html lang="en" class="dark">
@@ -161,94 +161,59 @@
 
                   <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Solutions' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg bg-white" x-ref="panel" @click.away="open = false" style="display: none;">
                     <div class="max-w-7xl mx-auto grid gap-y-6 py-6 sm:grid-cols-2 sm:gap-8 sm:py-8 lg:grid-cols-4 lg:py-12 xl:py-16">
-                      <a href="#" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
-                        <div class="flex md:h-full lg:flex-col">
-                          <div class="flex-shrink-0">
-                            <span class="inline-flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                              <svg class="h-6 w-6" x-description="Heroicon name: outline/chart-bar" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
-                              </svg>
-                            </span>
-                          </div>
-                          <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
-                            <div>
-                              <p class="text-base font-medium text-gray-900">
-                                Analytics
-                              </p>
-                              <p class="mt-1 text-sm text-gray-500">
-                                Get a better understanding of where your traffic is coming from.
-                              </p>
+                      {% get_objects 2 as o_pages for pages.page %}
+                      {% get_objects 2 as o_posts for blog.post %}
+
+                      {% for o_page in o_pages %}
+                        <a href="{{ o_page.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
+                          <div class="flex md:h-full lg:flex-col">
+                            <div class="flex-shrink-0">
+                              <span class="inline-flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                                </svg>
+                              </span>
                             </div>
-                            <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more <span aria-hidden="true">→</span></p>
-                          </div>
-                        </div>
-                      </a>
-                      <a href="#" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
-                        <div class="flex md:h-full lg:flex-col">
-                          <div class="flex-shrink-0">
-                            <span class="inline-flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                              <svg class="h-6 w-6" x-description="Heroicon name: outline/cursor-click" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 15l-2 5L9 9l11 4-5 2zm0 0l5 5M7.188 2.239l.777 2.897M5.136 7.965l-2.898-.777M13.95 4.05l-2.122 2.122m-5.657 5.656l-2.12 2.122"></path>
-                              </svg>
-                            </span>
-                          </div>
-                          <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
-                            <div>
-                              <p class="text-base font-medium text-gray-900">
-                                Engagement
-                              </p>
-                              <p class="mt-1 text-sm text-gray-500">
-                                Speak directly to your customers in a more meaningful way.
-                              </p>
+                            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
+                              <div>
+                                <p class="text-base font-medium text-gray-900">
+                                  {{ o_page.title }}
+                                </p>
+                                <p class="mt-1 text-sm text-gray-500">
+                                  {{ o_page.description }}
+                                </p>
+                              </div>
+                              <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more <span aria-hidden="true">→</span></p>
                             </div>
-                            <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more <span aria-hidden="true">→</span></p>
                           </div>
-                        </div>
-                      </a>
-                      <a href="#" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
-                        <div class="flex md:h-full lg:flex-col">
-                          <div class="flex-shrink-0">
-                            <span class="inline-flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                              <svg class="h-6 w-6" x-description="Heroicon name: outline/shield-check" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
-                              </svg>
-                            </span>
-                          </div>
-                          <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
-                            <div>
-                              <p class="text-base font-medium text-gray-900">
-                                Security
-                              </p>
-                              <p class="mt-1 text-sm text-gray-500">
-                                Your customers' data will be safe and secure.
-                              </p>
+                        </a>
+                      {% endfor %}
+
+                      {% for o_post in o_posts %}
+                        <a href="{{ o_post.get_absolute_url }}" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
+                          <div class="flex md:h-full lg:flex-col">
+                            <div class="flex-shrink-0">
+                              <span class="inline-flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+                                </svg>
+                              </span>
                             </div>
-                            <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more <span aria-hidden="true">→</span></p>
-                          </div>
-                        </div>
-                      </a>
-                      <a href="#" class="-m-3 p-3 flex flex-col justify-between rounded-lg hover:bg-gray-50">
-                        <div class="flex md:h-full lg:flex-col">
-                          <div class="flex-shrink-0">
-                            <span class="inline-flex items-center justify-center h-10 w-10 rounded-md bg-indigo-500 text-white sm:h-12 sm:w-12">
-                              <svg class="h-6 w-6" x-description="Heroicon name: outline/view-grid" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"></path>
-                              </svg>
-                            </span>
-                          </div>
-                          <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
-                            <div>
-                              <p class="text-base font-medium text-gray-900">
-                                Integrations
-                              </p>
-                              <p class="mt-1 text-sm text-gray-500">
-                                Connect with third-party tools that you're already using.
-                              </p>
+                            <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0 lg:mt-4">
+                              <div>
+                                <p class="text-base font-medium text-gray-900">
+                                  {{ o_post.title }}
+                                </p>
+                                <p class="mt-1 text-sm text-gray-500">
+                                  {{ o_post.description }}
+                                </p>
+                              </div>
+                              <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more <span aria-hidden="true">→</span></p>
                             </div>
-                            <p class="mt-2 text-sm font-medium text-indigo-600 lg:mt-4">Learn more <span aria-hidden="true">→</span></p>
                           </div>
-                        </div>
-                      </a>
+                        </a>
+                      {% endfor %}
+
                     </div>
                     <div class="bg-gray-50">
                       <div class="max-w-7xl mx-auto space-y-6 py-5 sm:flex sm:space-y-0 sm:space-x-10">
