--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -70,7 +70,7 @@
             <li class="inline">
               <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}" class="relative inline-flex items-center rounded-full border border-gray-300 px-3 py-0.5">
                 <div class="absolute flex-shrink-0 flex items-center justify-center">
-                  <span class="h-1.5 w-1.5 rounded-full bg-rose-500" aria-hidden="true"></span>
+                  <span class="h-1.5 w-1.5 rounded-full" style="background-color: {{ tag.color }}" aria-hidden="true"></span>
                 </div>
                 <div class="ml-3.5 text-sm font-medium text-gray-900">{{ tag }}</div>
               </a>
@@ -84,7 +84,7 @@
             <li class="inline">
               <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}" class="relative inline-flex items-center rounded-full border border-gray-300 px-3 py-0.5">
                 <div class="absolute flex-shrink-0 flex items-center justify-center">
-                  <span class="h-1.5 w-1.5 rounded-full bg-rose-500" aria-hidden="true"></span>
+                  <span class="h-1.5 w-1.5 rounded-full" style="background-color: {{ tag.color }}" aria-hidden="true"></span>
                 </div>
                 <div class="ml-3.5 text-sm font-medium text-gray-900">{{ tag }}</div>
               </a>
