--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -221,7 +221,7 @@
             {% if not user.is_superuser %}
               {% for tag in object.get_tags %}
                 {% spaceless %}
-                  <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}">{{ tag }}</a>
+                  <span class="badge border border-light rounded-circle p-1" style="background-color: {{ tag.color }};"><span class="visually-hidden">Tag color</span></span>&nbsp;<a href="{% url 'blog:post_tagged_with' slug=tag.slug %}">{{ tag }}</a>
                   {% if not forloop.last %}
                     <span>,</span>
                   {% endif %}
