--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -160,7 +160,7 @@
                   </button>
 
                   <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Solutions' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 transform shadow-lg bg-white" x-ref="panel" @click.away="open = false" style="display: none;">
-                    <div class="max-w-7xl mx-auto grid gap-y-6 py-6 sm:grid-cols-2 sm:gap-8 sm:py-8 lg:grid-cols-4 lg:py-12 xl:py-16">
+                    <div class="max-w-7xl mx-auto grid gap-y-10 px-4 py-8 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
                       {% get_objects 2 as o_pages for pages.page %}
                       {% get_objects 2 as o_posts for blog.post %}
 
@@ -213,10 +213,10 @@
                           </div>
                         </a>
                       {% endfor %}
-
                     </div>
+
                     <div class="bg-gray-50">
-                      <div class="max-w-7xl mx-auto space-y-6 py-5 sm:flex sm:space-y-0 sm:space-x-10">
+                      <div class="max-w-7xl mx-auto space-y-6 px-4 py-5 sm:px-6 lg:px-8 xl:pr-12 sm:flex sm:space-y-0 sm:space-x-10">
                         <div class="flow-root">
                           <a href="{% url 'blog:category_list' %}" class="-m-3 p-3 flex items-center rounded-md text-base font-medium text-gray-900 hover:bg-gray-100">
                             <svg xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0 h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -245,14 +245,6 @@
                     </div>
                   </div>
                 </div>
-
-                <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">
-                  Pricing
-                </a>
-
-                <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">
-                  Docs
-                </a>
 
                 <div x-data="Components.popover({ open: false, focus: false })" x-init="init()" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
                   <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group bg-white rounded-md inline-flex items-center text-base font-medium hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-gray-500" :class="{ 'text-gray-900': open, 'text-gray-500': !(open) }" @click="toggle" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
@@ -305,6 +297,15 @@
                     </div>
                   </div>
                 </div>
+                {% if user.is_superuser %}
+                  <a href="{% url 'admin:index' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">
+                    Admin
+                  </a>
+
+                  <a href="https://eu.pythonanywhere.com" class="text-base font-medium text-gray-500 hover:text-gray-900">
+                    Host
+                  </a>
+                {% endif %}
               </nav>
               <div class="flex items-center md:ml-12">
                 {% if not user.is_authenticated %}
