--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -4,11 +4,11 @@
 
 @layer components {
     .menu_mobile_buttons {
-        @apply mt-1 first:mt-0 block px-3 py-2 rounded-md text-base font-medium text-white bg-indigo-800;
+        @apply mt-1 block rounded-md bg-indigo-800 px-3 py-2 text-base font-medium text-white first:mt-0;
     }
 
     .pagination_buttons {
-        @apply relative inline-flex items-center px-2 py-2 border border-gray-300 text-sm font-medium text-gray-500 disabled:bg-slate-600 disabled:cursor-not-allowed;
+        @apply relative inline-flex items-center border border-gray-300 px-2 py-2 text-sm font-medium text-gray-500 disabled:cursor-not-allowed disabled:bg-slate-600;
     }
 
     .next_pagination_button {
@@ -17,5 +17,13 @@
 
     .previous_pagination_button {
         @apply pagination_buttons rounded-l-md;
+    }
+
+    .profile-active-tab {
+        @apply border-pink-500 text-gray-900;
+    }
+
+    :not(profile-active-tab) {
+        @apply border-transparent;
     }
 }
