--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -85,8 +85,10 @@
               <p class="text-sm text-gray-700">
                 Showing
                 <span class="font-medium">{{ posts.count }}</span>
-                of
-                <span class="font-medium">{% o_count posts %}</span>
+                {% if posts %}
+                  of
+                  <span class="font-medium">{% o_count posts %}</span>
+                {% endif %}
                 results
               </p>
             </section>
